<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prueba</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_perfil_lb">Jose Luis Rivas Viedman</string>
    <string name="estado_perfil_lb">Estoy Feliz</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="textView2">Texto 2</string>
    <string name="followers">Followers</string>
    <string name="status">Status</string>
    <string name="comments">Comments</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_eventos_mouse">EventosMouse</string>

</resources>
