<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:background="#C3FCB2">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_grey"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:id="@+id/relativeLayoutPerfilPpal">

            <com.example.root.emotiosme.CircularImageView
                android:id="@+id/row_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/images"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nombre"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nombre_perfil_lb"
                android:textSize="@dimen/font_perfil_ppal"
                android:fontFamily=""
                android:layout_below="@+id/row_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_estado_actual"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/estado_perfil_lb"
                android:textSize="@dimen/font_12dp"
                android:textColor="@color/custom_greyDrk_5e5e5e"
                android:layout_below="@+id/tv_nombre"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_alias_perfil"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="New Text"
                android:textSize="@dimen/font_20dp"
                android:layout_below="@+id/tv_estado_actual"
                android:layout_alignEnd="@+id/row_icon"
                android:textColor="@color/custom_blue_019bf1" />


        <!--
    <com.example.root.prueba.RoundedImageView
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:src="@drawable/images"
        android:id="@+id/imgRounded"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
-->
    </RelativeLayout>


    <TableLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tablaLayout"
        android:layout_below="@+id/relativeLayoutPerfilPpal"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="@drawable/gradient_grey2">
<!--
        <TableRow

            android:layout_height="wrap_content"

            android:layout_width="fill_parent"

            android:gravity="center_horizontal">

            <TextView

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:textSize="20dp"

                android:text="TextView1"

                android:layout_span="3"

                android:padding="16dip"

                android:background="#0ff"

                android:textColor="#000000"/>

        </TableRow>



        <TableRow

            android:id="@+id/tableRow1"

            android:layout_height="wrap_content"

            android:layout_width="match_parent"

            >

            <TextView

                android:id="@+id/TextView02"

                android:text="TextView2"

                android:layout_weight="1"

                android:background="#0df"

                android:textColor="#000000"

                android:padding="28dip"

                android:gravity="center"/>

            <TextView

                android:id="@+id/TextView04"

                android:text="textView3"

                android:layout_weight="1"

                android:background="#dff"

                android:textColor="#000000"

                android:padding="28dip"

                android:gravity="center"/>

            <TextView

                android:id="@+id/TextView4"

                android:text="TextView4"

                android:layout_weight="1"

                android:background="#faa"

                android:textColor="#000000"

                android:padding="27dip"

                android:gravity="center"/>

        </TableRow>
-->


        <TableRow

            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/font_9dp"
            android:paddingBottom="@dimen/font_2dp">

            <TextView
                android:textSize="@dimen/font_60dp"
                android:id="@+id/TextView03"
                android:text=""
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="10dp" />
            <TextView
                android:textSize="@dimen/font_56dp"
                android:id="@+id/tv_icon_heart"
                android:text="2"
                android:layout_weight="1"
                android:textColor="#ff5b5b5b"
                android:gravity="center"
                android:layout_width="match_parent" />

            <TextView
                android:textSize="@dimen/font_56dp"
                android:id="@+id/tv_comment_bubble"
                android:text="3"
                android:layout_weight="1"
                android:textColor="#ff5b5b5b"
                android:gravity="center"
                android:layout_width="wrap_content" />

            <TextView
                android:textSize="@dimen/font_56dp"
                android:id="@+id/tv_user"
                android:text="4"
                android:layout_weight="1"
                android:textColor="#ff5b5b5b"
                android:gravity="center"
                android:layout_width="match_parent" />

            <TextView
                android:textSize="@dimen/font_60dp"
                android:id="@+id/TextView07"
                android:text=""
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="10dp" />

        </TableRow>

        <TableRow

            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/font_9dp"
            android:paddingBottom="@dimen/font_9dp"
            android:layout_marginTop="-20dp">

            <TextView
                android:textSize="@dimen/font_16dp"
                android:id="@+id/TextView08"
                android:text=""
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="10dp" />
            <TextView
                android:textSize="@dimen/font_16dp"
                android:id="@+id/TextView09"
                android:text="Feliz"
                android:layout_weight="1"
                android:textColor="#ff585858"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent" />

            <TextView
                android:textSize="@dimen/font_16dp"
                android:id="@+id/TextView10"
                android:text="34"
                android:layout_weight="1"
                android:textStyle="bold"

                android:textColor="#ff585858"
                android:gravity="center"
                android:layout_width="wrap_content" />

            <TextView
                android:textSize="@dimen/font_16dp"
                android:id="@+id/TextView11"
                android:text="415"
                android:layout_weight="1"
                android:textColor="#ff585858"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent" />

            <TextView
                android:textSize="@dimen/font_16dp"
                android:id="@+id/TextView12"
                android:text=""
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="10dp" />

        </TableRow>

        <TableRow

            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/font_9dp"
            android:paddingBottom="@dimen/font_9dp"
            android:layout_marginTop="-10dp">

            <TextView
                android:textSize="@dimen/font_60dp"
                android:id="@+id/TextView13"
                android:text=""
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="10dp"
                android:layout_height="16dp"/>
            <TextView
                android:textSize="@dimen/font_12dp"
                android:id="@+id/TextView14"
                android:text="@string/status"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:textColor="#ffa4a4a4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/font_12dp"
                android:id="@+id/TextView15"
                android:text="@string/comments"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:textColor="#ffa4a4a4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/font_12dp"
                android:id="@+id/TextView16"
                android:text="@string/followers"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:textColor="#ffa4a4a4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:textSize="@dimen/font_60dp"
                android:id="@+id/TextView17"
                android:text=""
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </TableRow>


    </TableLayout>

        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tablaLayout"
            android:background="@drawable/gradient_grey2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sample"
                android:textColor="#FFFFFF"
                android:textSize="58dp"
                android:text="This will - be changed in code" />




        </RelativeLayout>

    </RelativeLayout>
